--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
       "name": "Guilherme Souza"
     }
   ],
-  "require": {},
+  "require": {
+    "vlucas/phpdotenv": "^5.5"
+  },
   "autoload": {
     "psr-4": {
       "Framework\\": "src/Framework",
@@ -17,5 +19,8 @@
       "src/App/Config/Routes.php",
       "src/App/Config/Middleware.php"
     ]
+  },
+  "scripts": {
+    "phpdash": "php cli.php"
   }
 }
